// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`libA.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
declare function foo(x: number): void;

=====================================output=====================================
declare function foo(x: number): void;

================================================================================
`;

exports[`libB.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
declare function bar(x: string): void;

=====================================output=====================================
declare function bar(x: string): void;

================================================================================
`;

exports[`libtest.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
foo(123);
bar(123);

=====================================output=====================================
foo(123);
bar(123);

================================================================================
`;
